(fix) spacing between dropdown and beautify button

--- a/webview/features/requestBody/RequestBody/styles.css
+++ b/webview/features/requestBody/RequestBody/styles.css
@@ -58,3 +58,7 @@
 .select-raw-lang:focus {
   outline: none;
 }
+
+#request-beautify {
+  margin-left: 10px;
+}
